--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,6 +20,9 @@
   "rules": {
     "no-console": 0,
     "no-unused-vars": "off",
+    "@typescript-eslint/no-unused-vars": "off",
+    "no-use-before-define": "off",
+    "@typescript-eslint/no-use-before-define": "off",
     "class-methods-use-this": "off",
     "prettier/prettier": ["error", { "endOfLine": "auto" }],
     "@typescript-eslint/no-explicit-any": "error",
