--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,7 +14,8 @@
   ],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
-    "project": "./tsconfig.json"
+    "project": "./tsconfig.json",
+    "ecmaVersion": "9"
   },
   "plugins": ["@typescript-eslint", "prettier"],
   "rules": {
