--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,8 +13,8 @@
     "strict": true,
     "forceConsistentCasingInFileNames": true,
     "noFallthroughCasesInSwitch": true,
-    "module": "esnext",
-    "target": "ES6",
+    "module": "ES2022",
+    "target": "ES2017",
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "baseUrl": "./",
@@ -22,5 +22,6 @@
       "@src/*": ["./src/*"]
     }
   },
-  "include": ["src"]
+  "include": ["src"],
+  "exclude": ["node_modules"]
 }
