--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,7 @@
     "target": "ES2017",
     "moduleResolution": "node",
     "resolveJsonModule": true,
+    "suppressImplicitAnyIndexErrors": true,
     "baseUrl": "./",
     "paths": {
       "@src/*": ["./src/*"]
